2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel.c: (drop_uri): finish gio port

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): add
	back a string that was removed and will be used again soon. Right now,
	it's just sitting there, useless. But it's temporary :-)

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_volumes): renamed
	to...
	(panel_place_menu_item_append_local_gio): this. Also add mounts that
	have no volume and that have a root with a file: scheme
	(panel_place_menu_item_append_mounts): renamed to...
	(panel_place_menu_item_append_remote_gio): this. Only add mounts that
	have not a root with a file: scheme
	(panel_place_menu_item_create_menu): updated

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_items_append_from_desktop): fix
	compilation
	(panel_place_menu_item_drives_changed): new
	(panel_place_menu_item_volumes_changed): new
	(panel_place_menu_item_finalize): disconnect new signal handlers
	(panel_place_menu_item_init): connect to the drive-* and volume-*
	signals too

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	Once upon a time, someone created gio. And those words were told:
	"thou shall port your application to gio".
	And people worked hard towards this goal.

	* Makefile.am:
	* panel-mount-operation.[ch]: add PanelMountOperation, stolen from eel
	* panel-menu-items.c: (activate_uri): easy port to gio
	(panel_menu_items_append_from_desktop):  ditto
	(panel_place_menu_item_append_gtk_bookmarks): harder, but still okay
	port to gio
	(drive_poll_for_media_cb): new, callback when polling a drive. There's
	a FIXME: should we automount the newly discovered volume?
	(panel_menu_item_rescan_drive): new, we poll a drive when we activate
	it
	(panel_menu_item_append_drive): new, to append a drive to the menu
	(volume_mount_cb): new, callback when mounting a volume. There's a