@@ -1,5 +1,11 @@
 2008-02-11  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-menu-items.c: (panel_place_menu_item_append_local_gio),
+	(panel_place_menu_item_append_remote_gio): use g_file_is_native()
+	instead of looking at the URI scheme
+
+2008-02-11  Vincent Untz  <vuntz@gnome.org>
+
 	* panel.c: (drop_uri): finish gio port
 
 2008-02-10  Vincent Untz  <vuntz@gnome.org>
